Minor style adjustments in camo recipe JEI integration